Fixed Horizontal Overflow Error

--- a/style/style.css
+++ b/style/style.css
@@ -329,109 +329,83 @@ button {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 2%;
+  display: grid;
+  grid-template-columns: 1fr 866px;
 }
 
 .device-box {
-  width: 40%;
+  position: relative;
 }
 
-.device-frame {
-  width: 85%;
+.device-box img {
+  position: absolute;
 }
 
-.vigybag-image {
-  width: 100%;
+.device-1st {
+  top: 50px;
+}
+
+.device-2nd {
+  top: 90px;
+  left: 225px;
 }
 
 .app-info {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding-left: 20px;
+}
+
+.app-text {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 60%;
+  padding-top: 75px;
 }
-.play-button{
-  display: flex;
-  align-items: center;
-  padding:1.5rem;
+
+.app-text img {
+  width: 803px;
+  height: 174px;
 }
-.google-button{
-  background-color: #0d268c;
+
+.google-play-button {
+  background-color: #161b6e;
+  border: none;
   border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+  margin-left: 30px;
 }
-.google-button:hover{
+
+.google-play-button:hover {
   background-color: #575a89;
 }
-.play-text{
-  color:#ffffff;
-}
-@media screen and (max-width:767px) {
-  .app-container {
-      flex-direction: column;
-      align-items: center;
-      height: 50%;
-  }
 
-  .device-box {
-      width: 90%;
-
-  }
-  .device-frame {
-      width: 100%;
-  }
-
-  .vigybag-image {
-      width: 100%;
-  }
-
-  .app-info {
-      width: 90%;
-  }
+.play-button {
+  width: 340px;
+  height: 100px;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-@media screen and (min-width:768px) and (max-width:1199px) {
-  .app-container {
-      align-items: center;
-  }
-
-  .device-box {
-      width: 40%;
-  }
-
-  .device-frame {
-      width: 80%;
-  }
-
-  .vigybag-image {
-      width: 100%;
-  }
-
-  .app-info {
-      width: 60%;
-  }
+.play-img-div {
+  padding-left: 14px;
+  padding-right: 15px;
 }
 
-@media screen and (min-width:1200px) {
-  .device-box {
-      width: 40%;
-  }
-
-  .app-info {
-      width: 50%;
-  }
-  .device-frame {
-    width: 80%;
-    height:100%;
+.play-img-div img {
+  width: 76px;
+  height: 76px;
 }
 
-  .vigybag-image {
-    width: 100%;
+.play-text {
+  text-align: left;
+  line-height: 32px;
 }
-}
+
 /* items section */
 
 .items-container {
